--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cryptography
 dnspython
 email-validator
 Flask
+flask-restx
 Flask-Login
 Flask-Migrate
 Flask-Session
@@ -36,3 +37,13 @@ playwright
 Pillow
 Werkzeug>=2.3,<3.0
 APScheduler
+
+# New dependencies for enhanced features
+Flask-Limiter>=3.0
+Flask-CORS>=4.0
+PyJWT>=2.8
+gunicorn>=21.0
+marshmallow>=3.20
+pytest>=7.4
+pytest-flask>=1.3
+pytest-cov>=4.1
